fixed notifications
